@@ -40,6 +40,14 @@
   <url type="homepage">https://nongnu.org/gsequencer</url>
 
   <releases>
+    <release version="3.14.9" date="2021-12-26">
+      <description>
+	<p>
+	  Fixed wave form editor selection.
+	</p>
+      </description>
+    </release>
+
     <release version="3.14.8" date="2021-12-26">
       <description>
 	<p>
