@@ -1,3 +1,8 @@
+ags (3.14.9)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed wave form editor selection
+
 ags (3.14.8)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
